<resources>
    <string name="app_name">LocaliserMaStation</string>
    <string name="logov_locoeur">LogoVéloCoeur</string>
    <string name="bienvenue_sur_localiser_ma_station">Bienvenue sur Localiser ma Station</string>
    <string name="choisissez_votre_mode_d_affichage">Choisissez votre mode d\'affichage :</string>
    <string name="mode_pi_ton">Mode Piéton</string>
    <string name="go">Go</string>
    <string name="title_activity_maps">Map</string>
    <string name="retour">Retour</string>
    <string name="status">status:</string>
    <string name="nbre_de_place">Nbre de place</string>
    <string name="nbre_place_disponible">Nbre place disponible</string>
    <string name="nbre_v_lo_disponible">Nbre vélo disponible</string>
    <string name="adresse">Adresse</string>
    <string name="mode_pieton">Mode Pieton</string>
    <string name="retour_page_d_accueil">Retour Page D\'accueil</string>
    <string name="mode_cycliste">Mode Cycliste</string>
    <string name="zoom_ma_position">Zoom Ma Position</string>
    <string name="zoom_toulouse">Zoom Toulouse</string>
    <string name="title_activity_maps2">Map</string>
</resources>
