<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/bienvenue_sur_localiser_ma_station"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/iv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logov_locoeur"
        android:src="@drawable/logovelo" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/choisissez_votre_mode_d_affichage"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbPieton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/mode_pi_ton"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbCycliste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/mode_cycliste"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/JoliVert"
        android:onClick="onClickGo"
        android:text="@string/go"
        android:textColorHint="@color/colorPrimary"
        android:textSize="24sp" />

</LinearLayout>