<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ExplicationActivity">

    <Button
        android:id="@+id/btRetour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:onClick="onClickRetourAcueil"
        android:text="@string/retour_page_d_accueil" />

    <TextView
        android:id="@+id/lbModeCycliste"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mode_cycliste"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvModeCycliste"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="18sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/lbModePieton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/mode_pieton"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvModePieton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="18sp" />
</LinearLayout>